dmalgo.py.err
  File "<stdin>", line 46
    arbrebinomial(``A'',3,0.4)
                      ^
SyntaxError: invalid syntax
